@@ -1,0 +1,88 @@
+
+.logRow-firephp-trace {
+    padding: 0px;
+    margin: 0px;
+}
+
+.logRow-firephp-trace > .head {
+  margin: 0px;
+  padding-bottom: 1px;
+  padding-top: 2px;
+  padding-right: 10px;
+  background-color: LightYellow;
+}
+
+.logRow-firephp-trace > .head > .title {
+  cursor: pointer;
+  padding-left: 22px;    
+  padding-bottom: 0px;
+  padding-top: 2px;
+  font-family: Monaco, monospace;
+  background-image: url(chrome://firebug/skin/errorIcon.png);
+  background-repeat: no-repeat;
+  background-position: 4px 2px;
+  color: purple;
+  font-weight: normal;
+  text-decoration: underline;
+  font-size: 120%;
+}
+
+.logRow-firephp-trace > .head > .title:hover {
+    color: blue;
+    text-decoration: none !important;
+}
+
+.logRow-firephp-trace > .head > .title:hover {
+    text-decoration: underline !important;
+    color: blue;
+}
+
+.logRow-firephp-trace.opened {
+    border-bottom: 1px solid #D7D7D7;
+}
+
+
+.logRow-firephp-trace > .head > .info {
+    display: none;
+    padding-left: 10px;
+    margin-top: 2px;
+    padding-bottom: 10px;
+}
+
+.logRow-firephp-trace.opened > .head > .info {
+    display: block;
+}
+
+
+.logRow-firephp-trace.opened > .head > .info > TABLE TBODY TR TD.headerFile {
+  white-space:nowrap;
+  font-weight: bold;
+}
+
+.logRow-firephp-trace.opened > .head > .info > TABLE TBODY TR TD.headerLine {
+  white-space:nowrap;
+  font-weight: bold;
+  text-align: right;
+}
+.logRow-firephp-trace.opened > .head > .info > TABLE TBODY TR TD.headerInst {
+  white-space:nowrap;
+  font-weight: bold;
+  padding-left: 10px;
+  width: 100%;
+}
+
+.logRow-firephp-trace.opened > .head > .info > TABLE TBODY TR TD.cellFile {
+  border:1px solid #D7D7D7;
+  padding-right: 10px;
+}
+.logRow-firephp-trace.opened > .head > .info > TABLE TBODY TR TD.cellLine {
+  border:1px solid #D7D7D7;
+  text-align: right;
+}
+.logRow-firephp-trace.opened > .head > .info > TABLE TBODY TR TD.cellInst {
+  border:1px solid #D7D7D7;
+  padding-left: 10px;
+  font-weight: bold;
+}
+
+
