@@ -1,7 +1,10 @@
+<html>
+<head>
+  <script type="application/x-javascript" src="jquery.js"></script>
+</head>
 
-  <script type="application/x-javascript" src="jquery.js"/>
-
-
+<body>
+  
 <iframe src="Version1.php?frame=1" width="500" height="300"></iframe>
 
 <iframe src="Version1.php?frame=2" width="500" height="300"></iframe>
@@ -9,3 +12,6 @@
 <p><a href="#" onClick="$.get('Version1.php?var=1');">Version1.php?var=1</a></p>
 <p><a href="#" onClick="$.get('ConsoleTest.php');">ConsoleTest.php</a></p>
 <p><a href="#" onClick="$.get('ZendTest.php');">ZendTest.php</a></p>
+
+</body>
+</html>
